--- a/bhoma/formentry/client-experimental/todo
+++ b/bhoma/formentry/client-experimental/todo
@@ -2,4 +2,4 @@ dynamically create decade choice limits based on current year
 
 allow for some year spillover in the year select
 
-background color changing on input areas
+onclick for date fields
